--- a/app/boards/shields/engikeeb/engikeeb.conf
+++ b/app/boards/shields/engikeeb/engikeeb.conf
@@ -1,7 +1,6 @@
 # Uncomment to turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=15000
-CONFIG_SPI_LOG_LEVEL_DBG=y
+#CONFIG_ZMK_USB_LOGGING=y
+#CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=15000
 
 # Uncomment both to enable encoder
 CONFIG_EC11=y
